# pith

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  pytest.ini
benchmarks/: 2026-06-21-cross-language.md  2026-06-21-source-coverage.md  2026-06-22-source-coverage.md  2026-06-30-dossier.md  2026-06-30-gate-scorer.md  2026-06-30-walled-physics.md  LEADS_COVERAGE.md  REQUIREMENTS_GAPS.md  bench_python.py  combine.py  completeness.py  contact_finder.py  decision_maker_dossier.py  dm_dig.py  enrich_throughput.py  gate_eval.py  gtm_scenarios.py  leads_coverage.json  leads_coverage.py  loadtest.go  run_bench.sh  run_coverage.py  source_coverage.py
benchmarks/fixtures/: hn_item.html  mdn_fetch.html  un_history.html  wikipedia_ml.html
benchmarks/go/: go.mod  go.sum  main.go
benchmarks/rust/: Cargo.toml
docs/: PERSONAS.md
examples/: README.md  build_sales_list.py  companies.csv  enrich_list.py  investigate.py
examples/b2b/: README.md  app.py
examples/datatables/: gen.py
examples/gtm/: build_sales_list.py  buyer_intent.py  company_people.py  enrich_list.py  financial_profile.py
pith/: __init__.py  cli.py  console.html  core.py  disposable_domains.txt  evidence.py  extract.py  financials.py  gravatar.py  jobs.py  leads.py  news.py  osint_value.py  people.py  phoneintel.py  profiles.py  recipes.py  resolve.py  serve.py  techstack.py
tests/: test_async.py  test_b2b_app.py  test_batch.py  test_compat.py  test_edge.py  test_evidence.py  test_extract.py  test_financials.py  test_jobs.py  test_leadgen_app.py  test_leads.py  test_links.py  test_list_cleaner.py  test_live.py  test_llms_txt.py  test_news.py  test_osint.py  test_people.py  test_profiles.py  test_resolve.py  test_serve.py  test_techstack.py  test_tiers.py  test_unit.py  test_verify.py
(+41 files in other folders)
