[project]
name = "pith"
version = "0.1.0"
description = "Free URL -> clean, LLM-ready markdown. A drop-in for the Parallel Extract API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "trafilatura>=1.8",
]

[project.optional-dependencies]
# JS-rendered / bot-protected pages (Reddit, LinkedIn, …): a real stealth browser,
# plus curl_cffi for the cheap TLS-impersonation tier (rescues 403s without the browser).
# After installing this extra, run:  scrapling install   (downloads the browser once)
js = ["scrapling[fetchers]>=0.4", "curl_cffi>=0.7"]
# Non-HTML documents (PDF, Word, PowerPoint, Excel, epub, images) -> markdown:
docs = ["markitdown[all]>=0.0.1"]
# PDFs only (lighter than [docs] if that's all you need):
pdf = ["pymupdf>=1.24"]
osint = [
    "phonenumbers>=9.0.33",
]
# Bulk open business datasets for pith.leads: Overture Maps Places (via the overturemaps
# release resolver) and Foursquare Open Places (Parquet on Hugging Face, queried with DuckDB).
# The Overpass (OSM) provider needs none of this — it's live + stdlib-only.
places = [
    "overturemaps>=0.9.0",
    "duckdb>=1.0",
]
# Email deliverability: MX-record lookups for verify_email(check_mx=True). Without this, MX is
# reported as None and callers fall back to the stdlib domain-resolves check (no extra needed).
email = [
    "dnspython>=2.6",
]

[project.scripts]
pith = "pith.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pith"]

[tool.setuptools.package-data]
pith = ["disposable_domains.txt", "osint_sites.json"]  # bundled disposable list (MIT, umuterturk/email-verifier)
